--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.16",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.4.16",
     "react-router-dom": "^5.2.0",
     "stripe": "^8.128.0",
