--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopit",
+  "name": "yasser-shop",
   "version": "1.0.0",
   "description": "full ecommerce site using mern",
   "main": "server.js",
@@ -26,7 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.4.16",
     "react-router-dom": "^5.2.0",
-    "stripe": "^8.128.0",
+    "stripe": "^8.222.0",
     "validator": "^13.1.17"
   },
   "devDependencies": {
